--- a/register.html
+++ b/register.html
@@ -6,6 +6,89 @@
     <title>Campus CookBook - Register</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<style>
+    body {
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    min-height: 100vh; /* Full viewport height */
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: #fff3e6; /* Light peach color */
+    background-image: url('https://i.pinimg.com/736x/00/9e/6c/009e6cc0d03032583e11039683c3c8fb.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+}
+
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 255, 0.7); /* semi-transparent white overlay */
+        background-color: rgba(255, 255, 255, 0.7); /* Slightly more opaque */
+    z-index: -1;
+    }
+    
+    .main-container {
+    position: relative;
+    top: 60px; /* Adjust if your header height requires */
+    display: flex;
+    justify-content: center;
+    align-items: center; /* This will help vertically center the content */
+    width: 100%;
+    max-width: 450px; /* Adjusted size of the box */
+    padding: 40px;
+    margin: 0 auto;
+    margin-top: 40px; /* Added space from the top */
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box; /* Includes padding in the width */
+}
+
+.login-container {
+    width: 100%; /* Makes sure it uses all available space */
+    /* Keeps it centered and aligned */
+}
+
+    .login-container h2 {
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    .form-group {
+        margin-bottom: 20px;
+    }
+    .form-group input {
+        width: 100%;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+    .form-group button {
+    width: 100%;
+    padding: 10px;
+    background-color: #d1768f; /* Header's coral color */
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.form-group button:hover {
+    background-color: #d1768f; /* Darker coral color on hover */
+}
+
+    .error-message {
+        color: red;
+        margin-top: 10px;
+        text-align: center;
+    }
+</style>
 <body>
     <header>
         <div class="logo">
